--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^17.0.1",
     "react-dotenv": "^0.1.3",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^4.4.1",
     "recoil": "^0.1.2"
   },
   "scripts": {
@@ -38,9 +39,11 @@
     "@types/axios": "^0.14.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-transition-group": "^4.4.0",
     "@types/recoil": "0.0.1",
+    "@types/sass": "^1.16.0",
     "@types/styled-jsx": "^2.2.8",
-    "node-sass": "^4.14.1",
+    "sass": "^1.32.5",
     "styled-jsx": "^3.4.1",
     "typescript": "^4.1.3"
   },
