--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dotenv": "^0.1.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
     "recoil": "^0.1.2"
@@ -39,6 +40,7 @@
     "@types/axios": "^0.14.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "@types/react-transition-group": "^4.4.0",
     "@types/recoil": "0.0.1",
     "@types/sass": "^1.16.0",
