--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,12 @@
+php_value display_errors Off
+php_value mbstring.http_input auto
+php_value date.timezone America/New_York
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
 Cache-Control: no-cache
+
+Redirect /about /?about
+Redirect /home /?home
+Redirect /post /?post
+ErrorDocument 404 /404.html
