--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
+    "dateformat": "^4.5.1",
     "js-cookie": "^2.2.1",
     "pwacompat": "^2.0.17",
     "react": "^17.0.1",
